<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exomatik.carijasa.Auth.SignUpAct"
    android:background="@drawable/border_box_gradient_blue"
    android:padding="@dimen/margin_standard"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/width100"
            android:layout_height="@dimen/width100"
            android:src="@drawable/logo2"
            android:layout_centerHorizontal="true"
            android:elevation="@dimen/margin_standard"
            android:id="@+id/img_logo"
            android:layout_marginTop="@dimen/margin_standard"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/putih"
            android:textSize="@dimen/title_font"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_centerHorizontal="true"
            android:id="@+id/text_sign_up"
            android:layout_below="@+id/img_logo"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rl_white_left_radius"
            android:padding="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_below="@+id/text_sign_up"
            android:id="@+id/rl_top"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_perusahaan"
                android:textStyle="bold"
                android:textSize="@dimen/text_font"
                android:textColor="@color/hitamGray"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text_nama"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_nama"
                android:src="@drawable/ic_nama_black"
                android:layout_marginTop="@dimen/margin_standard"
                android:id="@+id/img_nama"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_nama"
                android:layout_toRightOf="@+id/img_nama"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_standard"
                android:layout_marginLeft="@dimen/margin_standard"
                android:background="@drawable/border_et_gray"
                android:textColor="@color/hitam"
                android:textSize="@dimen/title_font"
                android:maxLines="1"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/et_nama"
                android:digits="@string/digit_biasa"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="@dimen/text_font"
                android:textColor="@color/hitamGray"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text_email"
                android:layout_below="@+id/et_nama"
                android:layout_marginTop="@dimen/margin_standard"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_email"
                android:src="@drawable/ic_email_black"
                android:layout_marginTop="@dimen/margin_standard"
                android:id="@+id/img_email"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_email"
                android:layout_toRightOf="@+id/img_email"
                android:layout_marginTop="@dimen/margin_small"
                android:padding="@dimen/margin_standard"
                android:layout_marginLeft="@dimen/margin_standard"
                android:background="@drawable/border_et_gray"
                android:textColor="@color/hitam"
                android:textSize="@dimen/title_font"
                android:maxLines="1"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/et_email"
                android:digits="@string/digit_email"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="@dimen/text_font"
                android:textColor="@color/hitamGray"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text_pass"
                android:layout_below="@+id/et_email"
                android:layout_marginTop="@dimen/margin_standard"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_pass"
                android:src="@drawable/ic_password_black"
                android:layout_marginTop="@dimen/margin_standard"
                android:id="@+id/img_pass"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_pass"
                android:layout_toRightOf="@+id/img_pass"
                android:layout_toLeftOf="@+id/show_pass"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:padding="@dimen/margin_standard"
                android:textColor="@color/hitam"
                android:textSize="@dimen/title_font"
                android:maxLines="1"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/et_pass"
                android:background="@drawable/border_et_gray"
                android:inputType="textPassword"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_pass"
                android:layout_marginTop="@dimen/margin_standard"
                android:id="@+id/show_pass"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_akun"
                android:textStyle="bold"
                android:textSize="@dimen/text_font"
                android:textColor="@color/hitamGray"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text_jenis"
                android:layout_below="@+id/et_pass"
                android:layout_marginTop="@dimen/margin_standard"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_jenis"
                android:id="@+id/ln_jenis_akun"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_big"
                android:layout_marginLeft="@dimen/margin_big"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/border_rl_gradient_blue"
                    android:layout_marginRight="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:id="@+id/rl_jenis1"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_company_white"
                        android:id="@+id/img_1"
                        android:layout_centerVertical="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/akun_1"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/text_font"
                        android:layout_toRightOf="@+id/img_1"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:fontFamily="@font/roboto_regular"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/border_rl_gradient_gray"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:padding="@dimen/margin_small"
                    android:id="@+id/rl_jenis2"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_work_white"
                        android:id="@+id/img_2"
                        android:layout_centerVertical="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/akun_2"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/text_font"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_toRightOf="@+id/img_2"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_small"
                        />
                </RelativeLayout>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ln_jenis_akun"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/sign_up"
                android:textSize="@dimen/title_font"
                android:textColor="@color/putih"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/btn_gradient_blue_rounded"
                android:layout_marginBottom="@dimen/margin_big"
                android:id="@+id/btn_sign_up"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_rl_white_right_radius"
            android:layout_below="@+id/rl_top"
            android:layout_marginTop="@dimen/margin_big"
            android:padding="@dimen/margin_big"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_have_account"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="@dimen/text_font"
                android:textColor="@color/hitamGray"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/text_no_account"
                android:layout_marginTop="@dimen/margin_big"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_no_account"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/login"
                android:textSize="@dimen/title_font"
                android:textColor="@color/hitam"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/btn_white_blue_rounded"
                android:layout_marginBottom="@dimen/margin_big"
                android:id="@+id/btn_sign_in"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
